[tool.poetry]
name = "kzc"
version = "0.1.0"
description = ""
authors = ["uxert <150385101+uxert@users.noreply.github.com>"]
license = "^3.11"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
