[tool.poetry]
name = "testpoetry"
version = "0.1.0"
description = ""
authors = ["uxert <uxert@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
